Update project to reflect the renaming of "Shelterinho" to "Orfanato" across all components, pages, and API calls. This includes changes to titles, labels, and references in various files for consistency and clarity.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shelterinho NIB",
-  "name": "Shelterinho NIB",
+  "short_name": "Orfanato NIB",
+  "name": "Orfanato NIB",
   "icons": [
     {
       "src": "favicon.ico",
